Segunda version con cambios y reparaciones agregadas

--- a/app/src/main/res/layout/content_send_data.xml
+++ b/app/src/main/res/layout/content_send_data.xml
@@ -20,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="#55ffffff"
+        android:background="#AA000000"
         android:layout_gravity="top|center">
 
         <TextView
@@ -30,66 +30,18 @@
             android:layout_height="wrap_content"
             android:maxLines="1"
             android:ellipsize="end"
+            android:textColor="#ffffff"
             android:text="File name"/>
 
         <TextView
             android:id="@+id/text_view_params"
             android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_weight="3"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:textColor="#ffffff"
             android:layout_height="wrap_content"
             android:text="Params values"/>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/text_view_status"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textSize="20sp"
-                android:text="Status Activity"/>
-
-
-        </LinearLayout>
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linear_center"
-        android:padding="15dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="#55ffffff"
-        android:layout_gravity="center">
-
-        <TextView
-            android:id="@+id/text_view_current_activity"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Current Background Activity"
-            android:textSize="20sp"
-            android:textColor="@color/cardview_dark_background"
-            android:padding="10dp"
-            android:textAllCaps="true"
-            android:textAlignment="center"/>
-
-        <ProgressBar
-            android:layout_width="match_parent"
-            android:indeterminate="false"
-            android:max="100"
-            android:id="@+id/progressBar"
-            android:progress="0"
-            android:layout_height="35dp"
-            style="@android:style/Widget.ProgressBar.Horizontal"
-            android:progressDrawable="@drawable/progressbarcolor"
-            android:layout_gravity="center_horizontal" />
-
     </LinearLayout>
 
 </FrameLayout>
