--- a/app/src/main/res/layout/custom_dialog_rv.xml
+++ b/app/src/main/res/layout/custom_dialog_rv.xml
@@ -9,21 +9,24 @@
         android:layout_width="match_parent"
         android:adjustViewBounds="true"
         android:src="@drawable/ic_menu_gallery"
-        android:layout_height="170dp" />
+        android:layout_height="0dp"
+        android:layout_weight="3"/>
 
     <LinearLayout
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/btn_select_for_process"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="2"
             android:background="@color/color_accent"
             android:text="@string/dialog_run_algorithm"
             android:textAllCaps="false"
+            android:textSize="25sp"
             android:textColor="@color/color_icons"
             />
 
@@ -36,17 +39,19 @@
             android:layout_weight="2"
             android:text="@string/dialog_view"
             android:textAllCaps="false"
+            android:textSize="25sp"
             />
 
         <Button
             android:id="@+id/btn_cancel_dialog"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/color_accent"
             android:text="@string/dialog_close"
             android:textAllCaps="false"
             android:textColor="@color/color_icons"
+            android:textSize="21sp"
             />
     </LinearLayout>
 
