--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -17,9 +17,8 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:scaleType="fitStart"
-
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:src="@mipmap/ic_clientserver" />
+        android:src="@android:drawable/ic_menu_preferences" />
 
     <TextView
         android:layout_width="match_parent"
@@ -30,8 +29,10 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:maxLines="3"
+        android:ellipsize="end"
         android:text="@string/android_studio_android_com" />
 
 </LinearLayout>
